--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <p>Useless! Useless! 
-        —heavy rain driving
-        into the sea
-    
-        BY: Jack Kerouac</p>
+    <p> Useless! Useless! <p>
+    </p> —heavy rain driving <p>
+    </p>     into the sea<p>
+    <p></p>
+    </p>     By: Jack Kerouac</p>
 </body>
 </html>
