--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Home Page</h1>
-    <a href="/contact.html"></a>
-    <p> Useless! Useless! <p>
-    </p> —heavy rain driving <p>
-    </p>     into the sea<p>
-    <p></p>
-    </p>     By: Jack Kerouac</p>
+    <h1>Contact Page</h1>
 </body>
 </html>
