--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <a href="/contact.html"></a>
+    <a href="/contact.html">contact</a>
     <p> Useless! Useless! <p>
     </p> —heavy rain driving <p>
     </p>     into the sea<p>
